<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/asked_suggestion_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/accept_suggestion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

        <Button
            android:id="@+id/reject_suggestion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/last_suggestion_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last" />

        <Button
            android:id="@+id/next_suggestion_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>