<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.mybox.EnrollOrgActivity" >

    <RelativeLayout
        android:id="@+id/org_detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <EditText
        android:id="@+id/enrollment_key_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/enrollment_key" />

    <EditText
        android:id="@+id/enrollment_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/enroll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enroll" />

</LinearLayout>