<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/app_image"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />


    <EditText
        android:id="@+id/username_textbox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password_textbox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:context=".LoginActivity" >

        <Button
            android:id="@+id/sign_up_button"
            style="@style/CustomButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/CustomButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/sign_in" />
    </LinearLayout>

</LinearLayout>